package com.padel.reservation.entity;

public enum ReservationStatus {
    PENDING,
    CONFIRMED,
    REJECTED,
    CANCELLED
}
