package com.padel.reservation.entity;

public enum Role {
    ADMIN,
    MEMBER
}
