@startuml
class User {
  Long id
  String firstName
  String lastName
  String email
  String password
  Role role
}

enum Role {
  ADMIN
  MEMBER
}

class Terrain {
  Long id
  String name
  String description
  String location
  Double price
  String state
}

class Slot {
  Long id
  LocalDate date
  LocalTime startTime
  LocalTime endTime
}

class Reservation {
  Long id
  LocalDateTime reservationDate
  ReservationStatus status
}

enum ReservationStatus {
  PENDING
  CONFIRMED
  CANCELLED
  REJECTED
}

User "1" -- "*" Reservation : makes
Terrain "1" -- "*" Slot : has
Slot "1" -- "0..1" Reservation : is booked for
User -- Role
Reservation -- ReservationStatus
@enduml
